[project]
name = "cryosens-analytics"
version = "0.1.0"
description = "Analytics toolbox for heat exchanger performance monitoring"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "polars>=0.20.0",
    "plotly>=5.18.0",
    "ipywidgets>=8.0.0",
    "scipy>=1.11.0",
    "openpyxl>=3.1.2",
    "loguru>=0.7.0",
    "jupyter>=1.1.1",
    "fastexcel>=0.19.0",
    "pyarrow>=23.0.1",
    "rich>=14.3.3",
    "dash>=4.0.0",
    "anywidget>=0.9.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cryosens"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"